--- a/delice_sens.html
+++ b/delice_sens.html
@@ -7,22 +7,23 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&family=Shrikhand&display=swap" rel="stylesheet">    
     </head>
     <body>
         <header>
             <div class ="header__logo">
-                <img src="images/logo/ohmyfood.png" alt="logo">
+                <img src="images/logo/ohmyfood@2x.svg" alt="logo">
                 <div class="header__logo__arrow">
                     <a href="acceuil.html"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
             </div>
         </header>
         <footer>
-            <div class="footer__logo">
-                <img src="images/logo/ohmyfood.png" alt="logo">
-            </div>
+            <h1>ohmyfood</h1>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
                 <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
                 <li><a href="mailto:contact@mail.com">Contact</a></li>
