CSS Checkbox, MenuApparition

--- a/palette_gout.html
+++ b/palette_gout.html
@@ -16,7 +16,7 @@
             <div class ="header__logo">
                 <img src="images/logo/ohmyfood@2x.svg" alt="logo">
                 <div class="header__logo__arrow">
-                    <a href="acceuil.html"><i class="fa-solid fa-arrow-left"></i></a>
+                    <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
             </div>
         </header>
@@ -37,39 +37,41 @@
                     Entrées
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-1">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Fricassée d'escargot
-                        </span>
-                        <span class="dish__infos__description">
-                            Au piment d'Espelette 
-                        </span>
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Fricassée d'escargot
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Au piment d'Espelette 
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            25€
+                        </div>
                     </div>
-                    <div class="dish__price">
-                        25€
-                    </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-2">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
+                        <div class="dish__infos__title">
                             Foie gras de canard mi-cuit
-                        </span>
-                        <span class="dish__infos__description">
+                        </div>
+                        <div class="dish__infos__description">
                             Et ses copeaux de truffe noire
-                        </span>
+                        </div>
                     </div>
                     <div class="dish__price">
                         35€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-3">
                     <div class="dish__infos">
                         <span class="dish__infos__title">
                             Oeuf au plat
@@ -81,7 +83,7 @@
                     <div class="dish__price">
                         20€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -91,7 +93,7 @@
                     Plats
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-4">
                     <div class="dish__infos">
                         <span class="dish__infos__title">
                             Filet de boeuf aux herbes
@@ -103,27 +105,29 @@
                     <div class="dish__price">
                         40€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-5">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Parmentier de queue de boeuf
-                        </span>
-                        <span class="dish__infos__description">
-                            À la truffe noire sur sa purée de panais 
-                        </span>
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Parmentier de queue de boeuf
+                            </span>
+                            <span class="dish__infos__text__description">
+                                À la truffe noire sur sa purée de panais 
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            35€
+                        </div>
                     </div>
-                    <div class="dish__price">
-                        35€
-                    </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-6">
                     <div class="dish__infos">
                         <span class="dish__infos__title">
                             Filet de turbot
@@ -135,7 +139,7 @@
                     <div class="dish__price">
                         44€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -145,7 +149,7 @@
                     Desserts
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-7">
                     <div class="dish__infos">
                         <span class="dish__infos__title">
                             Paris-Brest
@@ -157,11 +161,11 @@
                     <div class="dish__price">
                         18€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-8">
                     <div class="dish__infos">
                         <span class="dish__infos__title">
                             Macaron au chocolat d'exception
@@ -173,11 +177,11 @@
                     <div class="dish__price">
                         22€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-9">
                     <div class="dish__infos">
                         <span class="dish__infos__title">
                             Mousse au chocolat
@@ -189,7 +193,7 @@
                     <div class="dish__price">
                         23€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
