--- a/index.html
+++ b/index.html
@@ -47,28 +47,30 @@
         </div>
         <div class="restaurants" id="list_restaurants">
             <h2>Restaurants</h2>
-            <div class="rcard">
-                <div class="rcard__image">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette_gout"> 
+            <a href="palette_gout.html">
+                <div class="rcard">   
+                    <div class="rcard__image">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette_gout" /> 
                         <div class="rcard__image__new">Nouveau</div>
-                </div>
-                <div class="rcard__body">
-                    <a href="palette_gout.html"><div class="rcard__body__infos">
-                        <div class="rcard__body__infos__name">
-                            La palette du goût
+                    </div>
+                    <div class="rcard__body">
+                        <div class="rcard__body__infos">
+                            <div class="rcard__body__infos__name">
+                                La palette du goût
+                            </div>
+                            <div class="rcard__body__infos__location">
+                                Ménilmontant
+                            </div>
                         </div>
-                        <div class="rcard__body__infos__location">
-                            Ménilmontant
-                        </div>
-                    </div></a>
-                    <div class="rcard__body__heart">
-                        <i class="fa-regular fa-heart"></i>
-                        <div class="rcard__body__heart__full">
-                            <i class="fa-solid fa-heart"></i>
+                        <div class="rcard__body__heart">
+                            <i class="fa-regular fa-heart"></i>
+                            <div class="rcard__body__heart__full">
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </a>
             <div class="rcard">
                 <div class="rcard__image">
                     <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="note_enchantee">
