--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -16,7 +16,7 @@
             <div class ="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="logo">
                 <div class="header__logo__arrow">
-                    <a href="acceuil.html"><i class="fa-solid fa-arrow-left"></i></a>
+                    <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
             </div>
         </header>
@@ -49,7 +49,7 @@
                     <div class="dish__price">
                         25€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                     <div class="dish__price">
                         35€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                     <div class="dish__price">
                         20€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <div class="dish__price">
                         35€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                     <div class="dish__price">
                         40€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     <div class="dish__price">
                         35€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     <div class="dish__price">
                         44€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                     <div class="dish__price">
                         18€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                     <div class="dish__price">
                         22€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                     <div class="dish__price">
                         23€
                     </div>
-                    <div class="dish__cheked">
+                    <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
