--- a/francaise.html
+++ b/francaise.html
@@ -37,49 +37,55 @@
                     Entrées
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-1">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Tartare de poulpe acidulé
-                        </span>
-                        <span class="dish__infos__description">
-                            Aux zestes d'orange
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        25€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Tartare de poulpe acidulé
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Aux zestes d'orange
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            25€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-2">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Velouté de légumes d'antan
-                        </span>
-                        <span class="dish__infos__description">
-                            Carotte, panais, topinambour
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        35€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Velouté de légumes d'antan
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Carotte, panais, topinambour
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            35€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-3">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Soupe à l'oignon
-                        </span>
-                        <span class="dish__infos__description">
-                            Revisitée
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        20€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Soupe à l'oignon
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Revisitée
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            20€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
@@ -91,49 +97,55 @@
                     Plats
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-4">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Coquilles Saint-Jacques
-                        </span>
-                        <span class="dish__infos__description">
-                            Accompagnées d'une purée de panais
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        40€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Coquilles Saint-Jacques
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Accompagnées d'une purée de panais
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            40€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-5">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Magret de canard
-                        </span>
-                        <span class="dish__infos__description">
-                            Et parmentier de pommes de terre 
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        35€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Magret de canard
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Et parmentier de pommes de terre 
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            35€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-6">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Pigeonneau d’Ille-et-Vilaine
-                        </span>
-                        <span class="dish__infos__description">
-                            Sur son lit de gnocchis aux légumes
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        44€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Pigeonneau d’Ille-et-Vilaine
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Sur son lit de gnocchis aux légumes
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            44€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
@@ -145,53 +157,64 @@
                     Desserts
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-7">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Pétales de violettes glacés
-                        </span>
-                        <span class="dish__infos__description">
-                            Et purée de noisettes
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        18€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Pétales de violettes glacés
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Et purée de noisettes
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            18€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-8">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Fondant au chocolat
-                        </span>
-                        <span class="dish__infos__description">
-                            Revisité
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        22€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Fondant au chocolat
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Revisité
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            22€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-9">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Millefeuille croustillant
-                        </span>
-                        <span class="dish__infos__description">
-                            Myrtilles et pâte d’amande
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        23€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Millefeuille croustillant
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Myrtilles et pâte d’amande
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            23€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
+                </div>
+            </div>
+            <div class="menu__commander">
+                <div class="btn">
+                    Commander
                 </div>
             </div>
         </div>
