--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -37,65 +37,73 @@
                     Entrées
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-1">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Ravioles de foie gras
-                        </span>
-                        <span class="dish__infos__description">
-                            Accompagnés de leur crème à la truffe 
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        25€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Ravioles de foie gras
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Accompagnés de leur crème à la truffe 
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            25€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-2">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Caviar osciètre
-                        </span>
-                        <span class="dish__infos__description">
-                            Sur blini à la farine de blé noir
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        35€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Caviar osciètre
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Sur blini à la farine de blé noir
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            35€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-3">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Homard et espuma de potiron
-                        </span>
-                        <span class="dish__infos__description">
-                            Mariné aux zestes d'orange
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        20€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Homard et espuma de potiron
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Mariné aux zestes d'orange
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            20€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-4">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Foie gras de canard cuit entier
-                        </span>
-                        <span class="dish__infos__description">
-                            Confiture de figue et pain toasté
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        35€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Foie gras de canard cuit entier
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Confiture de figue et pain toasté
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            35€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
@@ -107,49 +115,55 @@
                     Plats
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-5">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Noix de coquilles Saint-Jacques
-                        </span>
-                        <span class="dish__infos__description">
-                            Sur lit de purée de céleri-rave
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        40€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Noix de coquilles Saint-Jacques
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Sur lit de purée de céleri-rave
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            40€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-6">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Langoustine poêlée
-                        </span>
-                        <span class="dish__infos__description">
-                            Purée de patate douce 
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        35€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Langoustine poêlée
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Purée de patate douce 
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            35€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-7">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Mijoté de queue de boeuf
-                        </span>
-                        <span class="dish__infos__description">
-                            Et riz sauvage aux zestes de citron 
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        44€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Mijoté de queue de boeuf
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Et riz sauvage aux zestes de citron 
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            44€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
@@ -161,53 +175,64 @@
                     Desserts
                     <div class="border"></div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-8">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Macaron noisette et chocolat
-                        </span>
-                        <span class="dish__infos__description">
-                            Glace au caramel brun et sel de Guérande
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        18€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Macaron noisette et chocolat
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Glace au caramel brun et sel de Guérande
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            18€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-9">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Baba au rhum revisité
-                        </span>
-                        <span class="dish__infos__description">
-                            Avec son coulis de citron
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        22€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Baba au rhum revisité
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Avec son coulis de citron
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            22€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish">
+                <div class="dish" id="dish-10">
                     <div class="dish__infos">
-                        <span class="dish__infos__title">
-                            Tarte au citron meringuée
-                        </span>
-                        <span class="dish__infos__description">
-                            Déstructurée 
-                        </span>
-                    </div>
-                    <div class="dish__price">
-                        23€
+                        <div class="dish__infos__text">
+                            <span class="dish__infos__text__title">
+                                Tarte au citron meringuée
+                            </span>
+                            <span class="dish__infos__text__description">
+                                Déstructurée 
+                            </span>
+                        </div>
+                        <div class="dish__infos__price">
+                            23€
+                        </div>
                     </div>
                     <div class="dish__checked">
                         <i class="fa-regular fa-circle-check"></i>
                     </div>
+                </div>
+            </div>
+            <div class="menu__commander">
+                <div class="btn">
+                    Commander
                 </div>
             </div>
         </div>
